--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -11,8 +11,8 @@
   <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
-        <div class='date'>
-          <% day[:month] %>/<% day[:date] %></div>
+          <% day[:month] %>/<% day[:date] %>
+      </div>
         <ul class='content'>
         <% if day[:plans].length != 0 %>
           <% day[:plans].each do |plan| %>
@@ -20,7 +20,6 @@
           <% end %>
         <% end %>
         </ul>
-      </div>
     <% end %>
   </div>
 </div>
